[package]
name = "md2pk-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["env", "toml"] }
figment_file_provider_adapter = "0.1.1"
frontmatter-gen = "0.0.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.23", features = ["preserve_order"] }
walkdir = "2.5.0"
